data/derived/fa15/progs/unify/prog3778.ml.out
Characters 359-362:
  |Hoi(a,b) -> ("sin(pi*"^(exp a)^")"/"("("cos(pi*"^(exp b)^")")")");;
                                  ^^^
Error: This expression has type string but an expression was expected of type
         int
